--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Blogpost title
-author: Equinox-13
+title: Equinox
+author: Quaid Johar
 email: quaid.johar33@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Build with love using github pages
@@ -7,6 +7,6 @@ theme: minima
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+github_username: Equinox-13 # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
