--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Equinox
+title: Equinox Blog
 author: Quaid Johar
 email: quaid.johar33@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
